# CourseProject_2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: api_data.json  csv_data.csv  data.csv  data.json  excel_data.xlsx  from_csv.txt  json_data.json  top_15_vacancies.txt  vacancies.json  vacancies.txt
htmlcov/: index.html
src/: commands.py  file_editor.py  hh_api.py  utils.py  vacancy.py
temp/: vacancies.csv
tests/: test_commands.py  test_file_editor.py  test_hh_api.py  test_utils.py  test_vacancy.py
